auth(jwt): wire Authenticate concern, replace JwtToken->JsonWebToken, autoload lib, secure controllers, update swagger
